--- a/build
+++ b/build
@@ -3,7 +3,8 @@ cd /tmp/rom # Depends on where source got synced
 
 # Normal build steps
 . build/envsetup.sh
-lunch aosp_mido-user
+lunch wave_mido-userdebug
+export SELINUX_IGNORE_NEVERALLOWS=true
 export CCACHE_DIR=/tmp/ccache
 export CCACHE_EXEC=$(which ccache)
 export USE_CCACHE=1
@@ -48,7 +49,7 @@ id=571213272 # Your telegram id
 make api-stubs-docs || echo no problem
 make system-api-stubs-docs || echo no problem
 make test-api-stubs-docs || echo no problem
-
+make sepolicy || echo no problem
 make aex -j10 \
 	&& send_zip=$(up out/target/product/mido/*zip) && tg $id "Build Succeed!
 $send_zip" \
