--- a/build
+++ b/build
@@ -46,6 +46,7 @@ ccache -z # Clear old stats, so monitor script will provide real ccache statisti
 # Upload rom zip file if succeed to build! Send notification to tg! And send shell to tg if build fails!
 
 # Let's compile by parts! Coz of ram issue!
+mka clean
 make sepolicy || echo no problem
 #make api-stubs-docs || echo no problem
 #make system-api-stubs-docs || echo no problem
